reset image changed

--- a/src/html/template.html
+++ b/src/html/template.html
@@ -18,15 +18,9 @@
                 <span class="header__game-cards-count"> <span>Количество карт:</span><span id="game_cards-count"></span> </span>
             </div>
 
-            <nav class="header__controls">
-                <ul class="header__controls-list">
-                    <li class="header__controls-item">
-                        <button class="header__controls-btn" id="game_to-menu">
-                            <img src="./assets/images/icons/arrow.png" alt="arrow" class="header__controls-btn-img" />
-                        </button>
-                    </li>
-                </ul>
-            </nav>
+            <button class="header__controls-btn" id="game_reset">
+                <img src="./assets/images/icons/reset.png" alt="reset" class="header__controls-btn-img" />
+            </button>
         </header>
 
         <aside class="menu flex">
